<resources>
    <string name="app_name">zt2018110547</string>
    <string name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_address">输入地址</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_">|</string>
    <string name="forcast">预报</string>
    <string name="life_num">生活指数</string>
    <string name="cloder">降水量</string>
    <string name="clother">相对湿度</string>
    <string name="ultravio">紫外线强度</string>
    <string name="carwash">能见度</string>
    <string name="startgame">开始游戏</string>
    <string name="scoretotal">游戏得分</string>
    <string name="restart">重开一局</string>
    <string name="game_title">益智翻牌</string>
    <string name="continueGame">继续游戏</string>
    <string name="reset">重置</string>
    <string name="exit">退出游戏</string>
    <string name="musicHaved">已有歌曲</string>
    <string name="scored">得分记录</string>
    <string name="application_all">应用</string>
    <string name="function_all">功能</string>
    <string name="application_music">音乐播放器</string>
    <string name="function_music">自动/手动播放音乐/切换音乐（同时切换歌曲Ablum）/播放选择音乐/显示音乐详情</string>
    <string name="application_forecast">天气预报</string>
    <string name="function_forecast">展示天气信息/预测未来三天天气状态/搜索其他城市天气状况并展示/切换城市/切换地方</string>
    <string name="application_game">益智翻牌游戏</string>
    <string name="function_game">翻牌游戏实现/游戏进行中播放音乐/选择游戏难度/横屏动态变化/展示近几次游戏得分</string>
    <string name="current_time">当前时间：</string>
    <string name="setGame">设置难度</string>
    <string name="setgame_i">设置游戏难度</string>
    <string name="esa">简单</string>
    <string name="kunan">困难</string>
    <string name="feicnan">非常难</string>
    <string name="clear">清空</string>
    <string name="close">关闭</string>
    <string name="gametime">游戏时间</string>
    <string name="gamescore">游戏得分</string>
    <string name="game_rule">规则：相同牌色1分，完全相同3分，翻牌-2分</string>
</resources>