<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/scored"
            android:gravity="center"
            android:textColor="@color/grep_1"
            android:textSize="@dimen/sp_22"
            android:layout_marginBottom="@dimen/dp_4"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/gametime"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/gamescore"
                android:textSize="@dimen/sp_20"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/scoreClose"
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/scoreClear"
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="@dimen/sp_20"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>