<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.homeFragment"
    android:background="@drawable/bg_all">

    <FrameLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginEnd="@dimen/dp_60"
            android:layout_gravity="center"
            android:text= "App功能总览"
            android:singleLine="true"
            android:ellipsize="middle"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bodyLayout"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/application_all"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:text="@string/function_all"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/application_music"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:text="@string/function_music"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/application_forecast"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp_10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:text="@string/function_forecast"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/application_game"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp_10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:text="@string/function_game"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/current_time"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:id="@+id/currentTime"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp_10"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>